Adding A README.md

--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -37,7 +37,7 @@ separator = |
 separator-foreground = ${colors.foreground}
 spacing = 0 
 
-font-0 = "UbuntuMono Nerd Font:size=12;2"
+font-0 = "MesloLGL Nerd Font:size=10;3"
 font-1 = "FontAwesome:pixelsize=13;2"
 
 modules-left = date wlan bluetooth htb_status
