--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -77,7 +77,7 @@ fade-out-step = 0.06;
 # `xrender` is the default one.
 #
 # backend = 'glx'
-backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
