--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -8,26 +8,60 @@
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/xworkspaces]
-type = internal/xworkspaces
+[module/i3]
+type = internal/i3
 
-label-active =   [ %name% ]  
-label-active-padding = 1 
-label-occupied-foreground = ${colors.foreground}
-; label-active-background = ${colors.primary}
-; label-active-underline= ${colors.primary}
+pin-workspaces = true
+strip-wsnumbers = true
+index-sort = true
 
-label-occupied =  %name%
-; label-occupied-background = ${colors.alert}
-label-occupied-padding = 1
+; Available tags:
+;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
+;   <label-mode> (default)
+format = <label-state> <label-mode>
 
-label-urgent =  ( %name% )
-; label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
+; Available tokens:
+;   %mode%
+; Default: %mode%
+label-mode = - %mode% -
+label-mode-padding = 1
 
-label-empty = %name%
-; label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+;   %output%
+; Default: %icon%  %name%
+label-focused =  [ %index% ]
+label-focused-foreground = ${colors.foreground}
+label-focused-padding = 1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+;   %output%
+; Default: %icon%  %name%
+label-unfocused = %index%
+label-unfocused-padding = 1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+;   %output%
+; Default: %icon%  %name%
+label-visible = %index%
+label-visible-padding = 1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+;   %output%
+; Default: %icon%  %name%
+label-urgent = { %index% } 
+label-urgent-foreground = #bd2c40
 
 [module/battery]
 type = internal/battery
