--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 enable_audio_bell no
 
-font_family      Hack Nerd Font
+font_family      MesloLGS Nerd Font
 
 include ./theme.conf
 
@@ -34,6 +34,8 @@ sync_to_monitor yes
 
 map ctrl+shift+z toggle_layout stack
 tab_bar_style powerline
+
+window_padding_width 5
 
 active_tab_background #98c379
 inactive_tab_background #e06c75
