--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,310 +1,115 @@
-##############################################################################
-#                                 TRANSITION                                 #
-#                               Fork: Arian8j2                               #
-##############################################################################
+#################################
+#             Shadows           #
+#################################
 
-# When windows get moved or resized it transitions window position 
-transition = true;
+shadow = true;
+shadow-radius = 7;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
 
-# How many pixels move window to make the first position in transition (defaults to 20)
-transition-offset = 20;
+shadow-color = "#000000"
 
-# Direction of transition (top, right, bottom, left) e.g: "right" direction will make
-# all windows come from right to left
+#################################
+#           Fading              #
+#################################
 
-# (smart-x, smart-y) are smart direction that will check if there are 
-# multiple windows that splits the screen and will change their directions,
-# in "smart-x" it changes direction of left window to "right" and direction of 
-# right window to "left", if screen is not splited and a window is taking 
-# a lot of screen it will change that window direction to "left".
-# "smart-y" is also exactly like "smart-x" but instead of translating directions to
-# "right" and "left", it translate to "top" and "bottom"
-transition-direction = "smart-x";
+fading = true;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+fade-delta = 5
 
-# Function that calculates new position of window (defaults to "ease-out-cubic")
-# see https://easings.net for list of all functions
-# naming conventions are different to that site tho, e.g "easeInSine" is listed
-# on site but here that translated to "ease-in-sine"
-transition-timing-function = "ease-out-cubic";
+no-fading-openclose = false
+no-fading-destroyed-argb = false
 
-# Time between frames in transition. (0.01 - 1.0, defaults to 0.028)
-transition-step = 0.033;
+#################################
+#   Transparency / Opacity      #
+#################################
 
-# Similar to opacity rules but determites transition direction e.g:
-# "right: name *= 'Firefox'" will make firefox transition direction to right
-# Specify a list of transition rules, in the format `DIRECTION:PATTERN`
+frame-opacity = 1.0;
 
-# for disabling transition on specific patterns use "none" keyword as a direction
-# e.g: use "none: window_type = 'popup_menu'" for disabling transitions on popup menus
-transition-rule = [];
+#################################
+#           Corners             #
+#################################
 
-##############################################################################
-#                                  FADING                                    #
-##############################################################################
+corner-radius = 0
 
-# Fade windows in/out when opening/closing and when opacity changes,
-#  unless no-fading-openclose is used.
-fading = true
+#################################
+#       General Settings        #
+#################################
 
-# Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-# fade-in-step = 0.028
-fade-in-step = 0.06;
 
-# Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-# fade-out-step = 0.03
-fade-out-step = 0.06;
+# Specify the backend to use: `xrender`, `glx`, or `egl`.
 
-# The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+backend = "glx"
 
-# Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
+dithered-present = false;
+vsync = true;
 
-# Do not fade on window open/close.
-# no-fading-openclose = false
-
-# Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
-# no-fading-destroyed-argb = false
-
-##############################################################################
-#                                    GENERAL                                 #
-##############################################################################
-
-# Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-# daemon = false
-
-# Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
-# `xrender` is the default one.
-#
-# backend = 'glx'
-backend = "xrender";
-
-# Enable/disable VSync.
-# vsync = false
-vsync = false
-
-# Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
-# dbus = false
-
-# Try to detect WM windows (a non-override-redirect window with no 
-# child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
-mark-wmwin-focused = true;
-
-# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
-mark-ovredir-focused = true;
-
-# Try to detect windows with rounded corners and don't consider them 
-# shaped windows. The accuracy is not very high, unfortunately.
-#
-# detect-rounded-corners = false
 detect-rounded-corners = true;
-
-# Detect '_NET_WM_OPACITY' on client windows, useful for window managers
-# not passing '_NET_WM_OPACITY' of client windows to frame windows.
-#
-# detect-client-opacity = false
 detect-client-opacity = true;
+detect-transient = true;
 
-# Specify refresh rate of the screen. If not specified or 0, picom will 
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 0
+use-damage = true;
 
-# Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
-# boost performance. This should not be used with 
-#   vsync drm/opengl/opengl-oml
-# as they essentially does sw-opti's job already, 
-# unless you wish to specify a lower refresh rate than the actual value.
-#
-# sw-opti = 
+rules: (
 
-# Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window, 
-# rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy, 
-# provided that the WM supports it.
-#
-# use-ewmh-active-win = false
+	{
+		blur-background = false;
+		fade = false;
+	},
 
-# Unredirect all windows if a full-screen opaque window is detected, 
-# to maximize performance for full-screen windows. Known to cause flickering 
-# when redirecting/unredirecting windows.
-#
-# unredir-if-possible = false
+	{
+		match = "window_type = 'normal'";
+		fade = true;	#-fade-switch
+		shadow = true;	#-shadow-switch
+	},
 
-# Delay before unredirecting the window, in milliseconds. Defaults to 0.
-# unredir-if-possible-delay = 0
+	{
+		match = "window_type = 'dialog'";
+		shadow = true;	#-shadow-switch
+	},
 
-# Conditions of windows that shouldn't be considered full-screen for unredirecting screen.
-# unredir-if-possible-exclude = []
+	{
+		match = "window_type = 'tooltip'";
+		corner-radius = 0;
+		opacity = 0.90;
+	},
 
-# Use 'WM_TRANSIENT_FOR' to group windows, and consider windows 
-# in the same group focused at the same time.
-#
-# detect-transient = false
-detect-transient = true
+	{
+		match = "window_type = 'dock'";
+		corner-radius = 0;
+		fade = true;
+	},
 
-# Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
-# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
-# detect-transient is enabled, too.
-#
-# detect-client-leader = false
-detect-client-leader = true
+	{
+		match = "window_type = 'dropdown_menu' || window_type = 'menu' || window_type = 'popup' || window_type = 'popup_menu'";
+		corner-radius = 0;
+	},
 
-# Resize damaged region by a specific number of pixels. 
-# A positive value enlarges it while a negative one shrinks it. 
-# If the value is positive, those additional pixels will not be actually painted 
-# to screen, only used in blur calculation, and such. (Due to technical limitations, 
-# with use-damage, those pixels will still be incorrectly painted to screen.) 
-# Primarily used to fix the line corruption issues of blur, 
-# in which case you should use the blur radius value here 
-# (e.g. with a 3x3 kernel, you should use `--resize-damage 1`, 
-# with a 5x5 one you use `--resize-damage 2`, and so on). 
-# May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
-#
-# resize-damage = 1
+	{
+		match = "class_g = 'Alacritty'	|| class_g = 'kitty' || class_g = 'FloaTerm'";
+		opacity = 1.0;	#-term-opacity-switch
+		blur-background = false;	#-blur-switch
+	},
 
-# Specify a list of conditions of windows that should be painted with inverted color. 
-# Resource-hogging, and is not well tested.
-#
-# invert-color-include = []
+	{
+		match = "class_g = 'Polybar'	|| "
+				"class_g = 'Rofi'		|| "
+				"class_g = 'Dunst'		|| "
+		corner-radius = 0;
+	},
 
-# GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
-# Might cause incorrect opacity when rendering transparent content (but never 
-# practically happened) and may not work with blur-background. 
-# My tests show a 15% performance boost. Recommended.
-#
-# glx-no-stencil = false
+	{
+		match = "name = 'Notification'		|| "
+				"class_g = 'Dunst'			|| "
+				"class_g = 'Polybar'		|| "
+				"class_g = 'Spotify'		|| "
+				"class_g = 'firefox'		|| "
+				"class_g = 'Rofi'			|| "
+				"_GTK_FRAME_EXTENTS@";
+		shadow = false;
+	},
 
-# GLX backend: Avoid rebinding pixmap on window damage. 
-# Probably could improve performance on rapid window content changes, 
-# but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
-# Recommended if it works.
-#
-# glx-no-rebind-pixmap = false
+@include "picom-animations.conf"
+)
 
-# Disable the use of damage information. 
-# This cause the whole screen to be redrawn everytime, instead of the part of the screen
-# has actually changed. Potentially degrades the performance, but might fix some artifacts.
-# The opposing option is use-damage
-#
-# no-use-damage = false
-use-damage = true
-
-# Use X Sync fence to sync clients' draw calls, to make sure all draw 
-# calls are finished before picom starts drawing. Needed on nvidia-drivers 
-# with GLX backend for some users.
-#
-# xrender-sync-fence = false
-
-# GLX backend: Use specified GLSL fragment shader for rendering window contents. 
-# See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl` 
-# in the source tree for examples.
-#
-# glx-fshader-win = ''
-
-# Force all windows to be painted with blending. Useful if you 
-# have a glx-fshader-win that could turn opaque pixels transparent.
-#
-# force-win-blend = false
-
-# Do not use EWMH to detect fullscreen windows. 
-# Reverts to checking if a window is fullscreen based only on its size and coordinates.
-#
-# no-ewmh-fullscreen = false
-
-# Dimming bright windows so their brightness doesn't exceed this set value. 
-# Brightness of a window is estimated by averaging all pixels in the window, 
-# so this could comes with a performance hit. 
-# Setting this to 1.0 disables this behaviour. Requires --use-damage to be disabled. (default: 1.0)
-#
-# max-brightness = 1.0
-
-# Make transparent windows clip other windows like non-transparent windows do,
-# instead of blending on top of them.
-#
-# transparent-clipping = false
-
-# Set the log level. Possible values are:
-#  "trace", "debug", "info", "warn", "error"
-# in increasing level of importance. Case doesn't matter. 
-# If using the "TRACE" log level, it's better to log into a file 
-# using *--log-file*, since it can generate a huge stream of logs.
-#
-# log-level = "debug"
-log-level = "warn";
-
-# Set the log file.
-# If *--log-file* is never specified, logs will be written to stderr. 
-# Otherwise, logs will to written to the given file, though some of the early 
-# logs might still be written to the stderr. 
-# When setting this option from the config file, it is recommended to use an absolute path.
-#
-# log-file = '/path/to/your/log/file'
-
-# Show all X errors (for debugging)
-# show-all-xerrors = false
-
-# Write process ID to a file.
-# write-pid-path = '/path/to/your/log/file'
-
-# Window type settings
-# 
-# 'WINDOW_TYPE' is one of the 15 window types defined in EWMH standard: 
-#     "unknown", "desktop", "dock", "toolbar", "menu", "utility", 
-#     "splash", "dialog", "normal", "dropdown_menu", "popup_menu", 
-#     "tooltip", "notification", "combo", and "dnd".
-# 
-# Following per window-type options are available: ::
-# 
-#   fade, shadow:::
-#     Controls window-type-specific shadow and fade settings.
-# 
-#   opacity:::
-#     Controls default opacity of the window type.
-# 
-#   focus:::
-#     Controls whether the window of this type is to be always considered focused. 
-#     (By default, all window types except "normal" and "dialog" has this on.)
-# 
-#   full-shadow:::
-#     Controls whether shadow is drawn under the parts of the window that you 
-#     normally won't be able to see. Useful when the window has parts of it 
-#     transparent, and you want shadows in those areas.
-# 
-#   redir-ignore:::
-#     Controls whether this type of windows should cause screen to become 
-#     redirected again after been unredirected. If you have unredir-if-possible
-#     set, and doesn't want certain window to cause unnecessary screen redirection, 
-#     you can set this to `true`.
-#
-wintypes:
-{
-    dialog = {
-        shadow = false;
-    };
-    dnd = {
-        shadow = false;
-    };
-    dropdown_menu = {
-        shadow = false;
-    };
-    menu = {
-        shadow = false;
-        full-shadow = true;
-    };
-    popup_menu = {
-        shadow = false;
-        full-shadow = true;
-    };
-    tooltip = { 
-        fade = true;
-        shadow = true;
-        full-shadow = false;
-    };
-    utility = {
-        shadow = false;
-    };
-}
