a few updates and new startup script

--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -12,7 +12,11 @@
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/colors.ini
 
+[section/base]
+monitor = ${env:MONITOR:}
+
 [bar/mybar]
+inherit = section/base
 width = 99.49%
 height = 24pt
 radius = 0
