--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,8 +8,8 @@ set $mod Mod4
 # Window titles
 font pango:MesloLGL Nerd Font 8
 
-# Wallpaper
-exec_always --no-startup-id nitrogen --restore
+# Dual monitor
+exec_always --no-startup-id $HOME/.config/i3/scripts/start.sh
 
 # Start XDG autostart .desktop files using dex. See also
 exec --no-startup-id dex --autostart --environment i3
@@ -79,6 +79,10 @@ bindsym $mod+Shift+Right move right
 # Alternative layout
 exec_always --no-startup-id $HOME/.config/i3/alternating_layouts.py
 
+# Change keyboard layouts
+bindsym $mod+XF86MonBrightnessUp exec setxkbmap -layout latam && notify-send Keyboard\ Layout latam
+bindsym $mod+XF86MonBrightnessDown exec setxkbmap -layout us && notify-send Keyboard\ Layout us
+
 # split in horizontal orientation
 bindsym $mod+Alt+h split h
 
@@ -141,6 +145,16 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+################
+# Dual monitor #
+################
+
+# Move workspaces between monitors
+bindsym $mod+p move workspace to output right
+
+# Move containers between monitors
+bindsym $mod+Shift+p move container to output right
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -189,9 +203,9 @@ bindsym $mod+b exec blueman-manager
 bindsym $mod+x exec ~/.config/rofi/powermenu/type-1/powermenu.sh
 
 # autostart
-exec_always setxkbmap latam
-exec picom
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+# exec_always setxkbmap latam
+# exec picom
+# exec_always --no-startup-id ~/.config/polybar/launch.sh
 exec_always --no-startup-id dunst -config ~/.config/dunst/dunstrc
 
 # Betterlockscreen
