--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,13 +2,12 @@ enable_audio_bell no
 
 font_family      MesloLGS Nerd Font
 
-include ./ashen.conf
+# include kanagawa.conf
+include ashen.conf
 
 font_size 12
 
 disable_ligatures never
-
-url_color #61afef
 
 url_style curly
 
@@ -36,11 +35,6 @@ map ctrl+shift+z toggle_layout stack
 tab_bar_style powerline
 
 window_padding_width 5
-
-active_tab_background #98c379
-inactive_tab_background #e06c75
-inactive_tab_foreground #dedede
-# tab_bar_margin_color black
 
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+t new_tab_with_cwd
