--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -10,10 +10,10 @@
 
 
 [colors]
-background = #111111
+background = #121212
 background-alt = #373B41
-foreground = #DEDEDE
-primary = #F0C674
+foreground = #D5D5D5
+primary = #B14242
 secondary = #8ABEB7
-alert = #A54242
+alert = #D87C4A
 disabled = #707880
