--- a/.config/i3/config
+++ b/.config/i3/config
@@ -187,7 +187,7 @@ bindsym $mod+r mode "resize"
 
 ######## Colors
 # class                 border  backgr. text    indicator child_border
-client.focused          #dedede #dedede #111111 #dedede   #dedede
+client.focused          #D5D5D5 #D5D5D5 #111111 #D5D5D5   #D5D5D5
 client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
@@ -215,7 +215,7 @@ bindsym $mod+ z exec betterlockscreen -l
 gaps top 39
 gaps inner 5
 # smart_gaps on
-smart_borders on
+# smart_borders on
 
 for_window [class="^.*"] border pixel 1
 
@@ -223,3 +223,6 @@ for_window [class="^.*"] border pixel 1
 # for_window [class="VirtualBox Machine" instance="VirtualBox Machine"] floating enable
 for_window [class="Nitrogen" instance="nitrogen"] floating enable
 for_window [class="Blueman-manager"] floating enable
+for_window [class="pavucontrol"] floating enable
+for_window [class="mpv"] floating enable
+for_window [class="feh"] floating enable
