--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -39,6 +39,7 @@ window_padding_width 5
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+t new_tab_with_cwd
 
-background_opacity 0.989
+# background_opacity 0.989
+background_opacity 1
 
 shell zsh
