adding yazi config files

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,6 +11,9 @@ disable_ligatures never
 
 url_style curly
 
+term xterm-kitty
+linux_display_server x11
+
 map ctrl+left neighboring_window left
 map ctrl+right neighboring_window right
 map ctrl+up neighboring_window up
