--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -109,6 +109,7 @@ format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
+click-right = exec pavucontrol
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
