--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,9 +36,9 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # Screenshot
-bindsym --release Print exec scrot $HOME/Pictures/Screenshots/'snip_%m-%d-%Y_%H-%M-%S.png'
-bindsym --release $mod+Print exec scrot -s ~/Pictures/Screenshots/'selected_%m-%d-%Y_%H-%M-%S.png'
-bindsym --release $mod+Shift+Print exec scrot -s '/tmp/%F_%T_$wx$h.png' -e 'xclip -selection clipboard -target image/png -i $f'
+bindsym --release Print exec flameshot screen -p $HOME/Pictures/Screenshots/
+bindsym --release $mod+Print exec flameshot gui -p $HOME/Pictures/Screenshots/
+bindsym --release $mod+Shift+Print exec flameshot gui -c 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -145,6 +145,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+# Navigate workspaces next/previous
+bindsym Shift+Ctrl+l workspace next
+bindsym Shift+Ctrl+h workspace prev
+
 ################
 # Dual monitor #
 ################
@@ -198,6 +202,7 @@ client.background       #dedede
 # applications
 bindsym $mod+Shift+f exec firefox
 bindsym $mod+b exec blueman-manager
+bindsym $mod+Shift+b exec ~/.config/polybar/scripts/toggle_bluetooth.sh
 
 # Rofi power menu
 bindsym $mod+x exec ~/.config/rofi/powermenu/type-1/powermenu.sh
@@ -224,5 +229,5 @@ for_window [class="^.*"] border pixel 1
 for_window [class="Nitrogen" instance="nitrogen"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="pavucontrol"] floating enable
-for_window [class="mpv"] floating enable
+for_window [class="mpv"] fullscreen enable
 for_window [class="feh"] floating enable
