--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -6,6 +6,7 @@ shadow = true;
 shadow-radius = 16;
 shadow-offset-x = -9;
 shadow-offset-y = -9;
+shadow-opacity = 0.4;
 
 shadow-color = "#000000"
 
@@ -42,7 +43,7 @@ corner-radius = 0
 
 backend = "glx"
 
-dithered-present = false;
+dithered-present = true;
 vsync = true;
 
 detect-rounded-corners = true;
