--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -12,7 +12,8 @@
 [colors]
 background = #121212
 background-alt = #373B41
-foreground = #D5D5D5
+; foreground = #D5D5D5
+foreground = #C999A0
 primary = #B14242
 secondary = #8ABEB7
 alert = #D87C4A
