--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -63,6 +63,15 @@ label-visible-padding = 1
 label-urgent = { %index% } 
 label-urgent-foreground = #bd2c40
 
+[module/xkeyboard]
+type = internal/xkeyboard
+
+; List of indicators to ignore
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+
+format = <label-layout> <label-indicator>
+
 [module/battery]
 type = internal/battery
 low-at = 5
@@ -86,7 +95,7 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#dedede}%ifname%%{F#dedede} disconnected
+label-disconnected = %{F#C999A0}%ifname%%{F#C999A0} disconnected
 
 [module/wlan]
 inherit = network-base
