--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -45,7 +45,7 @@ font-0 = "MesloLGL Nerd Font:size=10;3"
 
 modules-left = date wlan bluetooth htb_status
 modules-center = i3
-modules-right = battery htb_target pulseaudio sysmenu
+modules-right = xkeyboard battery htb_target pulseaudio sysmenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
