--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -43,6 +43,9 @@ corner-radius = 0
 
 backend = "glx"
 
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+
 dithered-present = true;
 vsync = true;
 
@@ -89,14 +92,12 @@ rules: (
 
 	{
 		match = "class_g = 'Alacritty'	|| class_g = 'kitty' || class_g = 'FloaTerm'";
-		opacity = 1.0;	#-term-opacity-switch
+		opacity = 1;	#-term-opacity-switch
 		blur-background = false;	#-blur-switch
 	},
 
 	{
-		match = "class_g = 'Polybar'	|| "
-				"class_g = 'Rofi'		|| "
-				"class_g = 'Dunst'		|| "
+		match = "class_g = 'Polybar' || class_g = 'Rofi'	|| class_g = 'Dunst'"; 
 		corner-radius = 0;
 	},
 
