--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -95,7 +95,7 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#C999A0}%ifname%%{F#C999A0} disconnected
+label-disconnected = %ifname% disconnected
 
 [module/wlan]
 inherit = network-base
@@ -104,10 +104,10 @@ label-connected = %local_ip%
 
 [module/bluetooth]
 type = custom/script
-exec = ~/.config/polybar/scripts/bluetooth.sh
+exec = ~/.config/bin/bluetooth.sh
 interval = 2
 click-left = exec blueman-manager
-click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
+click-right = exec ~/.config/bin/toggle_bluetooth.sh
 format-padding = 1
 
 [module/pulseaudio]
@@ -147,5 +147,5 @@ time = %k:%M
 date = %b %e
 
 format = <label>
-format-foreground = ${color.foreground}
+format-foreground = ${colors.foreground}
 label = %date% - %time% 
