--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,14 @@
 enable_audio_bell no
+use_gpu no
+
+allow_remote_control yes
+listen_on unix:@mykitty
 
 font_family      MesloLGS Nerd Font
 
 # include kanagawa.conf
-include ashen.conf
+# include ashen.conf
+include ./themes/Hybrid.conf
 
 font_size 12
 
@@ -26,8 +31,9 @@ map F4 paste_from_buffer b
 
 cursor_shape beam
 cursor_beam_thickness 1.8
+cursor_blink_interval 0
 
-mouse_hide_wait 3.0
+mouse_hide_wait 1.0
 detect_urls yes
 
 repaint_delay 10
@@ -38,6 +44,7 @@ map ctrl+shift+z toggle_layout stack
 tab_bar_style powerline
 
 window_padding_width 5
+window_border_width 1
 
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+t new_tab_with_cwd
