--- a/.config/i3/config
+++ b/.config/i3/config
@@ -181,6 +181,9 @@ bindsym $mod+p move workspace to output right
 # Move containers between monitors
 bindsym $mod+Shift+p move container to output right
 
+# Change focus between monitors
+bindsym $mod+Shift+Tab focus output right
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
