--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,16 +1,28 @@
 enable_audio_bell no
-use_gpu no
 
 allow_remote_control yes
-listen_on unix:@mykitty
+listen_on unix:/tmp/kitty
+shell_integration enabled
+
+# kitty-scrollback.nvim Kitten alias
+action_alias kitty_scrollback_nvim kitten /home/r0lk444/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+
+# Browse scrollback buffer in nvim
+map alt+shift+h kitty_scrollback_nvim
+# Browse output of the last shell command in nvim
+map alt+shift+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# Show clicked command output in nvim
+mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
 font_family      MesloLGS Nerd Font
 
-# include kanagawa.conf
-# include ashen.conf
-include ./themes/Hybrid.conf
+font_size 13
 
-font_size 12
+include ./current_theme.conf
+
+map alt+s show_scrollback
+
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c 'fzf --no-sort --no-mouse --exact -i --tac | sed "s/❯ //" | tr -d "\n" | kitty +kitten clipboard'
 
 disable_ligatures never
 
@@ -53,3 +65,9 @@ map ctrl+shift+t new_tab_with_cwd
 background_opacity 1
 
 shell zsh
+
+
+# BEGIN_KITTY_THEME
+# Gruvbox Material Dark Hard
+include current-theme.conf
+# END_KITTY_THEME
