--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -33,7 +33,7 @@ padding-left = 2
 padding-right = 2
 
 border-size = 1pt
-border-color = ${colors.foreground}
+; border-color = ${colors.foreground}
 
 module-margin = 1
 
