--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -72,6 +72,11 @@ blacklist-1 = scroll lock
 
 format = <label-layout> <label-indicator>
 
+[module/tray]
+type = internal/tray
+format-margin = 4px
+tray-spacing = 4px
+
 [module/battery]
 type = internal/battery
 low-at = 5
