--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -10,9 +10,9 @@
 
 
 [colors]
-background = #1d2021
+background = #121212
 background-alt = #373B41
-foreground = #ebdbb2
+foreground = #D5D5D5
 primary = #B14242
 secondary = #8ABEB7
 alert = #D87C4A
