--- a/.config/i3/config
+++ b/.config/i3/config
@@ -220,8 +220,9 @@ bindsym $mod+b exec blueman-manager
 bindsym $mod+o exec obsidian
 bindsym $mod+g exec thunderbird
 
-# Rofi power menu
-bindsym $mod+x exec ~/.config/rofi/powermenu/type-1/powermenu.sh
+# Rofi Scripts
+bindsym $mod+x exec $HOME/.config/rofi/powermenu/type-1/powermenu.sh
+bindsym $mod+Shift+d exec $HOME/.config/rofi/applets/bin/projects.sh  
 
 # scratchpads
 bindsym $mod+u [instance="scratchterm"] scratchpad show; [instance="scratchterm"] move position center
