--- a/.config/i3/config
+++ b/.config/i3/config
@@ -54,8 +54,8 @@ bindsym $mod+Return exec kitty
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun -theme "~/.config/rofi/launchers/type-1/style-3.rasi"
+# start rofi (a program launcher)
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/type-1/launcher.sh
 
 # change focus
 bindsym $mod+h focus left
@@ -229,6 +229,7 @@ bindsym $mod+u [instance="scratchterm"] scratchpad show; [instance="scratchterm"
 
 # scripts
 bindsym $mod+minus exec $HOME/.config/i3/scripts/toggle_polybar.sh
+bindsym $mod+$alt+minus exec $HOME/.config/i3/scripts/toggle_polybar_nogaps.sh
 bindsym $mod+Shift+b exec ~/.config/bin/toggle_bluetooth.sh
 
 # Betterlockscreen
