--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,7 +14,10 @@ map alt+shift+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
-font_family      MesloLGS Nerd Font
+font_family      family="FiraCode Nerd Font"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 font_size 13
 
@@ -41,10 +44,6 @@ map F2 paste_from_buffer a
 map F3 copy_to_buffer b
 map F4 paste_from_buffer b
 
-cursor_shape beam
-cursor_beam_thickness 1.8
-cursor_blink_interval 0
-
 mouse_hide_wait 1.0
 detect_urls yes
 
@@ -61,7 +60,6 @@ window_border_width 1
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+t new_tab_with_cwd
 
-# background_opacity 0.989
 background_opacity 1
 
 shell zsh
