--- a/.config/picom/picom-animations.conf
+++ b/.config/picom/picom-animations.conf
@@ -3,74 +3,49 @@
   match = "window_type = 'normal'";
   animations = (
       {
-      triggers = ["close", "hide"];
-      opacity = {
-        curve = "linear";
-        duration = 0.3;
-        start = "window-raw-opacity-before";
-        end = 0;
-      };
-      blur-opacity = "opacity";
-      shadow-opacity = "opacity";
+      triggers = [ "close", "hide" ];
+      preset = "fly-out";
+      direction = "left";
+      duration = 0.1;
       },
       {
-      triggers = ["open", "show"];
-      opacity = {
-        curve = "cubic-bezier(0.4,0,0.2,1)";
-        duration = 0.3;
-        start = 0;
-        end = "window-raw-opacity";
-      };
-      blur-opacity = "opacity";
-      shadow-opacity = "opacity";
-
-      offset-x = "(1 - scale-x) / 2 * window-width";
-      offset-y = "(1 - scale-y) / 2 * window-height";
-
+      triggers = [ "open", "show" ];
+      preset = "slide-in";
+      direction = "right";
+      duration = 0.1;
+      },
+      {
+      triggers = ["geometry"]
       scale-x = {
-        curve = "cubic-bezier(0.4,0,0.2,1)";
-        duration = 0.4;
-        start = 0.8;
+      curve = "cubic-bezier(0.2,0.8,0.2,1)";
+      duration = 0.5;
+      start = "window-width-before / window-width";
+      end = 1;
+      }
+      scale-y = {
+        curve = "cubic-bezier(0.2,0.8,0.2,1)";
+        duration = 0.5;
+        start = "window-height-before / window-height";
         end = 1;
-      };
-      scale-y = "scale-x";
+      }
+      offset-x = {
+        curve = "cubic-bezier(0.2,0.8,0.2,1)";
+        duration = 0.5;
+        start = "window-x-before - window-x";
+        end = 0;
+      }
+      offset-y = {
+        curve = "cubic-bezier(0.2,0.8,0.2,1)";
+        duration = 0.5;
+        start = "window-y-before - window-y";
+        end = 0;
+      }
       shadow-scale-x = "scale-x";
       shadow-scale-y = "scale-y";
       shadow-offset-x = "offset-x";
       shadow-offset-y = "offset-y";
-      },
-      {
-        triggers = ["geometry"]
-          scale-x = {
-            curve = "cubic-bezier(0.2,0.8,0.2,1)";
-            duration = 0.5;
-            start = "window-width-before / window-width";
-            end = 1;
-          }
-        scale-y = {
-          curve = "cubic-bezier(0.2,0.8,0.2,1)";
-          duration = 0.5;
-          start = "window-height-before / window-height";
-          end = 1;
-        }
-        offset-x = {
-          curve = "cubic-bezier(0.2,0.8,0.2,1)";
-          duration = 0.5;
-          start = "window-x-before - window-x";
-          end = 0;
-        }
-        offset-y = {
-          curve = "cubic-bezier(0.2,0.8,0.2,1)";
-          duration = 0.5;
-          start = "window-y-before - window-y";
-          end = 0;
-        }
-        shadow-scale-x = "scale-x";
-        shadow-scale-y = "scale-y";
-        shadow-offset-x = "offset-x";
-        shadow-offset-y = "offset-y";
       }
-  )
+      )
 },
 
 # Animations for Rofi launchers.
@@ -110,3 +85,4 @@
       }
       )
 },
+
